fix(header): header title overflow auto removed

--- a/src/components/header/index.module.scss
+++ b/src/components/header/index.module.scss
@@ -1,6 +1,5 @@
 .header {
     width: 100%;
-    overflow: auto;
     h1 {
         @media screen and (max-width: 800px) {
             margin-top: 0.3em;
